--- a/client/sebs_playhouse/frontend_practice.html
+++ b/client/sebs_playhouse/frontend_practice.html
@@ -11,7 +11,7 @@
             background-color: #002E6C;
         }
         h1 {
-            color: white;
+            color: rgb(94, 8, 8);
             text-align: center;
         }
         p {
@@ -19,12 +19,13 @@
             font-size: 20px;
         }
         .container {
-            width: 20%;
-            margin: auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 40%;
+            margin: 0 auto;
+            text-align: center;
+            background-color: rgb(132, 130, 130);
+            padding: 40px;
+            border-radius: 140px;
+            box-shadow: 100 100 10px rgba(76, 39, 39, 0.1);
 
         }
         img {
@@ -40,7 +41,7 @@
    <div class="container">
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
-        <img src="C:\Users\Seb\Downloads\idqFNQtx0X_logos.png" alt="Placeholder Image">
+        <img src="idqFNQtx0X_logos.png" alt="Placeholder Image">
     
     </div>
 </body>
